# multi-convex-mpc-target-tarcker

./: README.md
Nageli_implementation/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  code_gen.cpp  cvis.py  details.txt  info.txt  obs0.txt  obs1.txt  obs2.txt  obsx0.txt  obsx1.txt  obsx2.txt  obsy0.txt  obsy1.txt  obsy2.txt  quad_plot.py  test  test.c  x.txt  y.txt
Nageli_implementation/qpoases/: acado_auxiliary_functions.c
target_tracker/: CMakeLists.txt  package.xml
target_tracker/include/target_tracker/2_obs/: fov_const_drone_eigen.h
target_tracker/include/target_tracker/3_obs/: fov_const_drone_eigen_3_obs.h
target_tracker/include/target_tracker/tracker/: fov_tracker.h  fov_tracker_6_obs.h
target_tracker/launch/: 2_cylinder_0.35_wolrd.launch  3_cylinder_0.35_world.launch  3_cylinder_world_dynamic.launch  3_wall_world_dynamic.launch  6_cylinder_world_dynamic.launch  auto_chaser.launch  auto_chaser_gazebo_env.launch
target_tracker/params/: 2_obs_params.yaml  3_obs_params.yaml
target_tracker/src/2_obs_static_target/: fov_2_obs.cpp  mpc_fov_2_obs_ros_node.cpp
target_tracker/src/3_obs_static_target/: fov_3_obs.cpp  mpc_fov_3_obs_ros_node.cpp
target_tracker/src/tracker_dynamic_target/: fov_tracker_3_obs.cpp  mpc_tracker_3_obs_dyn_ros_node.cpp  mpc_tracker_3_obs_ros_node.cpp
target_tracker/src/tracker_dynamic_target/6_obs/: fov_tracker_6_obs.cpp  mpc_tracker_6_obs_ros_node.cpp
target_tracker/urdf/: cylinder_1.urdf  cylinder_1_0.35.urdf  cylinder_2.urdf  cylinder_2_0.35.urdf  cylinder_3.urdf  cylinder_3_0.35.urdf  cylinder_4.urdf  cylinder_4_0.35.urdf  cylinder_5.urdf  cylinder_5_0.35.urdf  cylinder_6.urdf  cylinder_6_0.35.urdf  target.urdf  wall_1.urdf  wall_2.urdf  wall_3.urdf
target_tracker/worlds/: 3_wall.bt  3_wall.world
